[gd_scene load_steps=8 format=2]

[ext_resource path="res://Board/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assetts/Theme/defaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assetts/Boats/Ships.png" type="Texture" id=3]
[ext_resource path="res://Placer/Placer.gd" type="Script" id=4]
[ext_resource path="res://Assetts/Icons/settingsIcon.png" type="Texture" id=5]
[ext_resource path="res://Settings/Settings.tscn" type="PackedScene" id=6]

[sub_resource type="TileSet" id=1]
0/name = "Ships.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 64, 128, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Ships.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 192, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Ships.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 192, 0, 192, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Ships.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 128, 64, 256, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Ships.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 128, 320, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[node name="Placer" type="Node2D"]
script = ExtResource( 4 )

[node name="Board" parent="." instance=ExtResource( 1 )]
position = Vector2( 1152, 128 )

[node name="Preview" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 1216, 192 )
tile_set = SubResource( 1 )
format = 1

[node name="Control" type="Control" parent="."]
margin_left = 192.0
margin_top = 128.0
margin_right = 896.0
margin_bottom = 832.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_right = 256.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
custom_constants/vseparation = 30
custom_constants/hseparation = 20
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Control/Panel/GridContainer"]
margin_top = 3.0
margin_right = 246.0
margin_bottom = 53.0
text = "Name"
align = 1
valign = 1

[node name="Size" type="Label" parent="Control/Panel/GridContainer"]
margin_left = 266.0
margin_top = 3.0
margin_right = 327.0
margin_bottom = 53.0
text = "Size"
align = 1

[node name="Hotkey" type="Label" parent="Control/Panel/GridContainer"]
margin_left = 347.0
margin_top = 3.0
margin_right = 446.0
margin_bottom = 53.0
text = "Hotkey"
align = 1

[node name="PlaceAll" type="Button" parent="Control/Panel/GridContainer"]
margin_left = 466.0
margin_right = 611.0
margin_bottom = 56.0
text = "PLace All"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearAll" type="Button" parent="Control/Panel/GridContainer"]
margin_left = 631.0
margin_right = 767.0
margin_bottom = 56.0
text = "Clear All"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarrierName" type="Label" parent="Control/Panel/GridContainer"]
margin_top = 89.0
margin_right = 246.0
margin_bottom = 139.0
text = "Aircraft Carrier"
align = 1

[node name="CarrierSize" type="Label" parent="Control/Panel/GridContainer"]
margin_left = 266.0
margin_top = 89.0
margin_right = 327.0
margin_bottom = 139.0
text = "5"
align = 1

[node name="CarrierHotkey" type="Label" parent="Control/Panel/GridContainer"]
margin_left = 347.0
margin_top = 89.0
margin_right = 446.0
margin_bottom = 139.0
text = "1"
align = 1

[node name="PlaceCarrier" type="Button" parent="Control/Panel/GridContainer"]
margin_left = 466.0
margin_top = 86.0
margin_right = 611.0
margin_bottom = 142.0
text = "Place"

[node name="ClearCarrier" type="Button" parent="Control/Panel/GridContainer"]
margin_left = 631.0
margin_top = 86.0
margin_right = 767.0
margin_bottom = 142.0
text = "Clear"

[node name="BattleShipName" type="Label" parent="Control/Panel/GridContainer"]
margin_top = 175.0
margin_right = 246.0
margin_bottom = 225.0
text = "Battleship"
align = 1

[node name="BattleshipSize" type="Label" parent="Control/Panel/GridContainer"]
margin_left = 266.0
margin_top = 175.0
margin_right = 327.0
margin_bottom = 225.0
text = "4"
align = 1

[node name="BattleShipHotkey" type="Label" parent="Control/Panel/GridContainer"]
margin_left = 347.0
margin_top = 175.0
margin_right = 446.0
margin_bottom = 225.0
text = "2"
align = 1

[node name="PlaceBattleShip" type="Button" parent="Control/Panel/GridContainer"]
margin_left = 466.0
margin_top = 172.0
margin_right = 611.0
margin_bottom = 228.0
text = "Place"

[node name="ClearBattleship" type="Button" parent="Control/Panel/GridContainer"]
margin_left = 631.0
margin_top = 172.0
margin_right = 767.0
margin_bottom = 228.0
text = "Clear"

[node name="DestroyerName" type="Label" parent="Control/Panel/GridContainer"]
margin_top = 261.0
margin_right = 246.0
margin_bottom = 311.0
text = "Desrtoyer"
align = 1

[node name="DesrtoyerSize" type="Label" parent="Control/Panel/GridContainer"]
margin_left = 266.0
margin_top = 261.0
margin_right = 327.0
margin_bottom = 311.0
text = "3"
align = 1

[node name="DestroyerHotkey" type="Label" parent="Control/Panel/GridContainer"]
margin_left = 347.0
margin_top = 261.0
margin_right = 446.0
margin_bottom = 311.0
text = "3"
align = 1

[node name="PlaceDestroyer" type="Button" parent="Control/Panel/GridContainer"]
margin_left = 466.0
margin_top = 258.0
margin_right = 611.0
margin_bottom = 314.0
text = "Place"

[node name="ClearDestroyer" type="Button" parent="Control/Panel/GridContainer"]
margin_left = 631.0
margin_top = 258.0
margin_right = 767.0
margin_bottom = 314.0
text = "Clear"

[node name="SubmarineName" type="Label" parent="Control/Panel/GridContainer"]
margin_top = 347.0
margin_right = 246.0
margin_bottom = 397.0
text = "Submarine"
align = 1

[node name="SubmarineSize" type="Label" parent="Control/Panel/GridContainer"]
margin_left = 266.0
margin_top = 347.0
margin_right = 327.0
margin_bottom = 397.0
text = "3"
align = 1

[node name="SubmarineHotkey" type="Label" parent="Control/Panel/GridContainer"]
margin_left = 347.0
margin_top = 347.0
margin_right = 446.0
margin_bottom = 397.0
text = "4"
align = 1

[node name="PlaceSubmarine" type="Button" parent="Control/Panel/GridContainer"]
margin_left = 466.0
margin_top = 344.0
margin_right = 611.0
margin_bottom = 400.0
text = "Place"

[node name="ClearSubmarine" type="Button" parent="Control/Panel/GridContainer"]
margin_left = 631.0
margin_top = 344.0
margin_right = 767.0
margin_bottom = 400.0
text = "Clear"

[node name="PartolBoatName" type="Label" parent="Control/Panel/GridContainer"]
margin_top = 433.0
margin_right = 246.0
margin_bottom = 483.0
text = "Patrol Boat"
align = 1

[node name="PArtolBoatSize" type="Label" parent="Control/Panel/GridContainer"]
margin_left = 266.0
margin_top = 433.0
margin_right = 327.0
margin_bottom = 483.0
text = "2"
align = 1

[node name="PatrolBoatHotKey" type="Label" parent="Control/Panel/GridContainer"]
margin_left = 347.0
margin_top = 433.0
margin_right = 446.0
margin_bottom = 483.0
text = "5"
align = 1

[node name="PlacePatrolBoat" type="Button" parent="Control/Panel/GridContainer"]
margin_left = 466.0
margin_top = 430.0
margin_right = 611.0
margin_bottom = 486.0
text = "Place"

[node name="ClearPatrolBoat" type="Button" parent="Control/Panel/GridContainer"]
margin_left = 631.0
margin_top = 430.0
margin_right = 767.0
margin_bottom = 486.0
text = "Clear"

[node name="DoneButton" type="Button" parent="Control/Panel"]
margin_left = 311.676
margin_top = 612.865
margin_right = 567.676
margin_bottom = 668.865
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitingLabel" type="Label" parent="Control/Panel"]
visible = false
margin_left = 35.459
margin_top = 688.758
margin_right = 884.459
margin_bottom = 738.758
text = "Waiting for the other player to finish placing their ships."

[node name="Label" type="Label" parent="Control/Panel"]
margin_top = 576.0
margin_right = 381.0
margin_bottom = 626.0
rect_scale = Vector2( 0.5, 0.5 )
text = "To rotate boats press \"R\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
margin_left = 1920.0
margin_top = 64.0
margin_right = 1996.0
margin_bottom = 134.0
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="pressed" from="Control/Panel/GridContainer/PlaceAll" to="." method="_on_PlaceAll_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/ClearAll" to="." method="_on_ClearAll_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/PlaceCarrier" to="." method="_on_PlaceCarrier_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/ClearCarrier" to="." method="_on_ClearCarrier_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/PlaceBattleShip" to="." method="_on_PlaceBattleShip_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/ClearBattleship" to="." method="_on_ClearBattleship_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/PlaceDestroyer" to="." method="_on_PlaceDestroyer_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/ClearDestroyer" to="." method="_on_ClearDestroyer_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/PlaceSubmarine" to="." method="_on_PlaceSubmarine_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/ClearSubmarine" to="." method="_on_ClearSubmarine_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/PlacePatrolBoat" to="." method="_on_PlacePatrolBoat_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/ClearPatrolBoat" to="." method="_on_ClearPatrolBoat_pressed"]
[connection signal="pressed" from="Control/Panel/DoneButton" to="." method="_on_DoneButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
